--- a/rules.html
+++ b/rules.html
@@ -16,10 +16,10 @@
     <h1 id="rule-title">How to Play</h1>
     <p id="rule-text">
       The game has four colored buttons, each producing a particular sound when
-      it is pressed or activated by the device. A round in the game consists of
-      the game lighting up one or more buttons in a random order, after which
-      the player must reproduce that order by pressing the buttons. As the game
-      progresses, the number of buttons to be pressed increases.
+      it is pressed or activated. A round in the game consists of the game
+      lighting up one or more buttons in a random order, after which the player
+      must reproduce that order by pressing the buttons. As the game progresses,
+      the number of buttons to be pressed increases.
     </p>
   </body>
 </html>
